--- a/app/home/home.css
+++ b/app/home/home.css
@@ -11,11 +11,41 @@
 
     display: flex;
     align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+    max-width: 100%;
+    width: 100%;
 }
 
-#intro-text {
-    font-weight: 900;
-    font-size: 10vh;
-    color: white;
+#intro-spacer {
+    height: 12vh;
+}
+
+#intro-text-wrapper > p{
     padding-left: 5%;
+    padding-right: 5%;
+    margin: 0;
+
+    color: white;
+
+    max-width: 500px;
+
+}
+
+#intro-text-wrapper > p:first-of-type {
+    font-weight: 900;
+    font-size: 3vh;
+}
+
+#intro-text-wrapper > :not(P:first-of-type) {
+    font-weight: 900;
+    font-size: 8vh;
+}
+
+#intro-image {
+    max-width: 200px;
+    width: auto;
+    height: auto;
 }
